tests/conformance/syntax/negative/opposite_prefix_invalid.ditt
module Syntax.OppositeNotationBad where

postulate C : Cat
id_op (x : ^C) : ^C = x
